Ajout schema structure

--- a/deck.mdx
+++ b/deck.mdx
@@ -421,25 +421,25 @@ class DebeziumSourceRecordConsumer : Consumer<SourceRecord> {
 
 <Horizontal>
 
+### 27 heures
+
 <ul>
 <li>Séquentiel</li>
 <li>Mono-threadé</li>
 <li>Insertion unitaire</li>
 </ul>
 
-## 27 heures
-
 </Horizontal>
 
 <Horizontal>
+
+### X heures
 
 <ul>
 <li>Batch d'entités debezium</li>
 <li>Mono-threadé</li>
 <li>Batch update</li>
 </ul>
-
-## X heures
 
 </Horizontal>
 
@@ -511,6 +511,22 @@ class DebeziumSourceRecordConsumer : EmbeddedEngine.ChangeConsumer {
 
 
 <img src='https://media3.giphy.com/media/2n8480RCQ2jBe/giphy.gif' width='30%'/>
+
+---
+
+<img src='https://github.com/aaudelin/debezium-slides/blob/master/images/structureh1.png?raw=true' width='40%'/>
+
+---
+
+<img src='https://github.com/aaudelin/debezium-slides/blob/master/images/structureh2.png?raw=true' width='100%'/>
+
+---
+
+<img src='https://github.com/aaudelin/debezium-slides/blob/master/images/structureh3.png?raw=true' width='100%'/>
+
+---
+
+<img src='https://github.com/aaudelin/debezium-slides/blob/master/images/structureh4.png?raw=true' width='100%'/>
 
 ---
 
