Init github pages

--- a/deck.mdx
+++ b/deck.mdx
@@ -552,7 +552,7 @@ class DebeziumSourceRecordConsumer : EmbeddedEngine.ChangeConsumer {
 
 ---
 
-## En synthèse
+# En synthèse
 
 <ul>
 
@@ -561,7 +561,23 @@ class DebeziumSourceRecordConsumer : EmbeddedEngine.ChangeConsumer {
 <li>Simple et pratique</li>
 <li>Performances et contraintes</li>
 <li>Solution batch et concurrence</li>
-<li>Maxwell, SpinalTap, Yelp’s MySQL Streamer, DBLog</li>
+
+</Appear>
+
+</ul>
+
+---
+
+# Autres solutions
+
+<ul>
+
+<Appear>
+
+<li>Maxwell</li>
+<li>SpinalTap</li>
+<li>Yelp’s MySQL Streamer</li>
+<li>DBLog</li>
 
 </Appear>
 
