--- a/deck.mdx
+++ b/deck.mdx
@@ -39,7 +39,7 @@ import "prismjs/components/prism-kotlin"
   
 <img src='https://www.solutions-numeriques.com/wp-content/uploads/2015/01/linkedin-1424358279.png' width='100'/>
 
-github.com/aaudelin
+linkedin.com/in/aaudelin/
 
 </Split>
 
@@ -47,7 +47,7 @@ github.com/aaudelin
 
 <img src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png' width='100'/>
 
-linkedin.com/in/aaudelin/
+github.com/aaudelin
 
 </Split>
 
@@ -147,7 +147,7 @@ _{Event Debezium}_
 <img src="https://cdn4.iconfinder.com/data/icons/computers-3/32/574-01-512.png"  width='10%' />
 
 <div>
-  Modèle de données cible
+  Modèle de données sink
 </div>
 
 </Appear>
@@ -371,6 +371,10 @@ class DebeziumSourceRecordConsumer : Consumer<SourceRecord> {
 
 ---
 
+<img src='https://debezium.io/images/debezium-architecture.png'  width='100%' />
+
+---
+
 # Modèle 'sink' structuré
 
 <ul>
@@ -399,7 +403,7 @@ class DebeziumSourceRecordConsumer : Consumer<SourceRecord> {
 
 ---
 
-# 27 Heures d'import initial
+## (1)27 Heures d'import initial
 
 ---
 
@@ -451,7 +455,7 @@ class DebeziumSourceRecordConsumer : Consumer<SourceRecord> {
 
 <Horizontal>
 
-### 4 heures
+### 7 heures
 
 <ul style="text-align:left; width:150%; margin-left:2em;font-size:0.8em">
 <li style={{ color:'indigo' }}>Batch d'entités debezium</li>
