--- a/deck.mdx
+++ b/deck.mdx
@@ -31,7 +31,7 @@ import "prismjs/components/prism-kotlin"
 
 <img src='https://upload.wikimedia.org/wikipedia/fr/c/c8/Twitter_Bird.svg' width='100'/>
 
-@AurelienAudelin
+[@AurelienAudelin](https://twitter.com/AurelienAudelin)
 
 </Split>
 
@@ -39,7 +39,7 @@ import "prismjs/components/prism-kotlin"
   
 <img src='https://www.solutions-numeriques.com/wp-content/uploads/2015/01/linkedin-1424358279.png' width='100'/>
 
-linkedin.com/in/aaudelin/
+[in/aaudelin](https://www.linkedin.com/in/aaudelin/)
 
 </Split>
 
@@ -47,7 +47,7 @@ linkedin.com/in/aaudelin/
 
 <img src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png' width='100'/>
 
-github.com/aaudelin
+[aaudelin](https://github.com/aaudelin)
 
 </Split>
 
