Ajout image jetbrains et malt

--- a/deck.mdx
+++ b/deck.mdx
@@ -624,7 +624,7 @@ class DebeziumSourceRecordConsumer : EmbeddedEngine.ChangeConsumer {
 
 <li>Simple et pratique</li>
 <li>Performances et contraintes</li>
-<li>Solution batch et concurrence</li>
+<li>S'accorde avec Kotlin :heart: </li>
 
 </Appear>
 
